# graphdb-client

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker_push.sh  pyproject.toml
graphdb/: __init__.py
graphdb/cli/: commands.py  context.py  main.py  register.py  specs.py
graphdb/core/: config.py  graphdb.py  graphdb_from_reg.py
graphdb/models/: __init__.py  sqlquery.py
scripts/: sqlquery_showcase.py  sqlquery_showcase_cli.sh
tests/: test_config.py  test_graphdb_e2e.py  test_graphdb_ssl.py  test_sqlquery.py
