[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "graphdb"
version = "0.1.0"
description = "EPFL Graph DB Client"
requires-python = ">=3.10"
dependencies = [
    "ipython",
    "sqlalchemy",
    "tqdm",
    "loguru",
    "rich",
    "pydantic>=2,<3",
    "numpy",
    "pandas",
    "tabulate",
    "pyyaml",
    "pymysql"
]

[project.scripts]
graphdb = "graphdb.cli.main:main"

[tool.setuptools.packages.find]
include = ["graphdb*"]
